--- a/css/style.css
+++ b/css/style.css
@@ -7727,6 +7727,10 @@ h1, h2, h3, h4, h5, h6 {
   opacity: 0;
 }
 
+.thumb {
+   image-resolution: 30dpi;
+}
+
 pre {
   background: #e9e9e9;
   border: 1px solid #ccc;
